--- a/Vue/public/index.html
+++ b/Vue/public/index.html
@@ -7,6 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
+
+        <h1>Hello World</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
